RIV/pbrt-v2/src/core/pbrtparse.output
Terminale, die in Grammatik unbenutzt sind

   ID


Grammatik

    0 $accept: start $end

    1 start: pbrt_stmt_list

    2 array_init: /* leer */

    3 string_array_init: /* leer */

    4 num_array_init: /* leer */

    5 array: string_array
    6      | num_array

    7 string_array: array_init LBRACK string_list RBRACK
    8             | single_element_string_array

    9 single_element_string_array: array_init string_list_entry

   10 string_list: string_list string_list_entry
   11            | string_list_entry

   12 string_list_entry: string_array_init STRING

   13 num_array: array_init LBRACK num_list RBRACK
   14          | single_element_num_array

   15 single_element_num_array: array_init num_list_entry

   16 num_list: num_list num_list_entry
   17         | num_list_entry

   18 num_list_entry: num_array_init NUM

   19 paramlist: paramlist_init paramlist_contents

   20 paramlist_init: /* leer */

   21 paramlist_contents: paramlist_entry paramlist_contents
   22                   | /* leer */

   23 paramlist_entry: STRING array

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt
   25               | pbrt_stmt

   26 pbrt_stmt: ACCELERATOR STRING paramlist
   27          | ACTIVETRANSFORM ALL
   28          | ACTIVETRANSFORM ENDTIME
   29          | ACTIVETRANSFORM STARTTIME
   30          | AREALIGHTSOURCE STRING paramlist
   31          | ATTRIBUTEBEGIN
   32          | ATTRIBUTEEND
   33          | CAMERA STRING paramlist
   34          | CONCATTRANSFORM num_array
   35          | COORDINATESYSTEM STRING
   36          | COORDSYSTRANSFORM STRING
   37          | FILM STRING paramlist
   38          | IDENTITY
   39          | INCLUDE STRING
   40          | LIGHTSOURCE STRING paramlist
   41          | LOOKAT NUM NUM NUM NUM NUM NUM NUM NUM NUM
   42          | MAKENAMEDMATERIAL STRING paramlist
   43          | MATERIAL STRING paramlist
   44          | NAMEDMATERIAL STRING
   45          | OBJECTBEGIN STRING
   46          | OBJECTEND
   47          | OBJECTINSTANCE STRING
   48          | PIXELFILTER STRING paramlist
   49          | RENDERER STRING paramlist
   50          | REVERSEORIENTATION
   51          | ROTATE NUM NUM NUM NUM
   52          | SAMPLER STRING paramlist
   53          | SCALE NUM NUM NUM
   54          | SHAPE STRING paramlist
   55          | SURFACEINTEGRATOR STRING paramlist
   56          | TEXTURE STRING STRING STRING paramlist
   57          | TRANSFORMBEGIN
   58          | TRANSFORMEND
   59          | TRANSFORMTIMES NUM NUM
   60          | TRANSFORM num_array
   61          | TRANSLATE NUM NUM NUM
   62          | VOLUMEINTEGRATOR STRING paramlist
   63          | VOLUME STRING paramlist
   64          | WORLDBEGIN
   65          | WORLDEND


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
STRING (258) 12 23 26 30 33 35 36 37 39 40 42 43 44 45 47 48 49 52
    54 55 56 62 63
ID (259)
NUM (260) 18 41 51 53 59 61
LBRACK (261) 7 13
RBRACK (262) 7 13
ACCELERATOR (263) 26
ACTIVETRANSFORM (264) 27 28 29
ALL (265) 27
AREALIGHTSOURCE (266) 30
ATTRIBUTEBEGIN (267) 31
ATTRIBUTEEND (268) 32
CAMERA (269) 33
CONCATTRANSFORM (270) 34
COORDINATESYSTEM (271) 35
COORDSYSTRANSFORM (272) 36
ENDTIME (273) 28
FILM (274) 37
IDENTITY (275) 38
INCLUDE (276) 39
LIGHTSOURCE (277) 40
LOOKAT (278) 41
MAKENAMEDMATERIAL (279) 42
MATERIAL (280) 43
NAMEDMATERIAL (281) 44
OBJECTBEGIN (282) 45
OBJECTEND (283) 46
OBJECTINSTANCE (284) 47
PIXELFILTER (285) 48
RENDERER (286) 49
REVERSEORIENTATION (287) 50
ROTATE (288) 51
SAMPLER (289) 52
SCALE (290) 53
SHAPE (291) 54
STARTTIME (292) 29
SURFACEINTEGRATOR (293) 55
TEXTURE (294) 56
TRANSFORMBEGIN (295) 57
TRANSFORMEND (296) 58
TRANSFORMTIMES (297) 59
TRANSFORM (298) 60
TRANSLATE (299) 61
VOLUME (300) 63
VOLUMEINTEGRATOR (301) 62
WORLDBEGIN (302) 64
WORLDEND (303) 65
HIGH_PRECEDENCE (304)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (50)
    auf der linken Seite: 0
start (51)
    auf der linken Seite: 1, auf der rechten Seite: 0
array_init (52)
    auf der linken Seite: 2, auf der rechten Seite: 7 9 13 15
string_array_init (53)
    auf der linken Seite: 3, auf der rechten Seite: 12
num_array_init (54)
    auf der linken Seite: 4, auf der rechten Seite: 18
array (55)
    auf der linken Seite: 5 6, auf der rechten Seite: 23
string_array (56)
    auf der linken Seite: 7 8, auf der rechten Seite: 5
single_element_string_array (57)
    auf der linken Seite: 9, auf der rechten Seite: 8
string_list (58)
    auf der linken Seite: 10 11, auf der rechten Seite: 7 10
string_list_entry (59)
    auf der linken Seite: 12, auf der rechten Seite: 9 10 11
num_array (60)
    auf der linken Seite: 13 14, auf der rechten Seite: 6 34 60
single_element_num_array (61)
    auf der linken Seite: 15, auf der rechten Seite: 14
num_list (62)
    auf der linken Seite: 16 17, auf der rechten Seite: 13 16
num_list_entry (63)
    auf der linken Seite: 18, auf der rechten Seite: 15 16 17
paramlist (64)
    auf der linken Seite: 19, auf der rechten Seite: 26 30 33 37 40
    42 43 48 49 52 54 55 56 62 63
paramlist_init (65)
    auf der linken Seite: 20, auf der rechten Seite: 19
paramlist_contents (66)
    auf der linken Seite: 21 22, auf der rechten Seite: 19 21
paramlist_entry (67)
    auf der linken Seite: 23, auf der rechten Seite: 21
pbrt_stmt_list (68)
    auf der linken Seite: 24 25, auf der rechten Seite: 1 24
pbrt_stmt (69)
    auf der linken Seite: 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65, auf der rechten Seite: 24 25


Zustand 0

    0 $accept: . start $end

    ACCELERATOR         schiebe und gehe zu Zustand 1 über
    ACTIVETRANSFORM     schiebe und gehe zu Zustand 2 über
    AREALIGHTSOURCE     schiebe und gehe zu Zustand 3 über
    ATTRIBUTEBEGIN      schiebe und gehe zu Zustand 4 über
    ATTRIBUTEEND        schiebe und gehe zu Zustand 5 über
    CAMERA              schiebe und gehe zu Zustand 6 über
    CONCATTRANSFORM     schiebe und gehe zu Zustand 7 über
    COORDINATESYSTEM    schiebe und gehe zu Zustand 8 über
    COORDSYSTRANSFORM   schiebe und gehe zu Zustand 9 über
    FILM                schiebe und gehe zu Zustand 10 über
    IDENTITY            schiebe und gehe zu Zustand 11 über
    INCLUDE             schiebe und gehe zu Zustand 12 über
    LIGHTSOURCE         schiebe und gehe zu Zustand 13 über
    LOOKAT              schiebe und gehe zu Zustand 14 über
    MAKENAMEDMATERIAL   schiebe und gehe zu Zustand 15 über
    MATERIAL            schiebe und gehe zu Zustand 16 über
    NAMEDMATERIAL       schiebe und gehe zu Zustand 17 über
    OBJECTBEGIN         schiebe und gehe zu Zustand 18 über
    OBJECTEND           schiebe und gehe zu Zustand 19 über
    OBJECTINSTANCE      schiebe und gehe zu Zustand 20 über
    PIXELFILTER         schiebe und gehe zu Zustand 21 über
    RENDERER            schiebe und gehe zu Zustand 22 über
    REVERSEORIENTATION  schiebe und gehe zu Zustand 23 über
    ROTATE              schiebe und gehe zu Zustand 24 über
    SAMPLER             schiebe und gehe zu Zustand 25 über
    SCALE               schiebe und gehe zu Zustand 26 über
    SHAPE               schiebe und gehe zu Zustand 27 über
    SURFACEINTEGRATOR   schiebe und gehe zu Zustand 28 über
    TEXTURE             schiebe und gehe zu Zustand 29 über
    TRANSFORMBEGIN      schiebe und gehe zu Zustand 30 über
    TRANSFORMEND        schiebe und gehe zu Zustand 31 über
    TRANSFORMTIMES      schiebe und gehe zu Zustand 32 über
    TRANSFORM           schiebe und gehe zu Zustand 33 über
    TRANSLATE           schiebe und gehe zu Zustand 34 über
    VOLUME              schiebe und gehe zu Zustand 35 über
    VOLUMEINTEGRATOR    schiebe und gehe zu Zustand 36 über
    WORLDBEGIN          schiebe und gehe zu Zustand 37 über
    WORLDEND            schiebe und gehe zu Zustand 38 über

    start           gehe zu Zustand 39 über
    pbrt_stmt_list  gehe zu Zustand 40 über
    pbrt_stmt       gehe zu Zustand 41 über


Zustand 1

   26 pbrt_stmt: ACCELERATOR . STRING paramlist

    STRING  schiebe und gehe zu Zustand 42 über


Zustand 2

   27 pbrt_stmt: ACTIVETRANSFORM . ALL
   28          | ACTIVETRANSFORM . ENDTIME
   29          | ACTIVETRANSFORM . STARTTIME

    ALL        schiebe und gehe zu Zustand 43 über
    ENDTIME    schiebe und gehe zu Zustand 44 über
    STARTTIME  schiebe und gehe zu Zustand 45 über


Zustand 3

   30 pbrt_stmt: AREALIGHTSOURCE . STRING paramlist

    STRING  schiebe und gehe zu Zustand 46 über


Zustand 4

   31 pbrt_stmt: ATTRIBUTEBEGIN .

    $default  reduziere mit Regel 31 (pbrt_stmt)


Zustand 5

   32 pbrt_stmt: ATTRIBUTEEND .

    $default  reduziere mit Regel 32 (pbrt_stmt)


Zustand 6

   33 pbrt_stmt: CAMERA . STRING paramlist

    STRING  schiebe und gehe zu Zustand 47 über


Zustand 7

   34 pbrt_stmt: CONCATTRANSFORM . num_array

    $default  reduziere mit Regel 2 (array_init)

    array_init                gehe zu Zustand 48 über
    num_array                 gehe zu Zustand 49 über
    single_element_num_array  gehe zu Zustand 50 über


Zustand 8

   35 pbrt_stmt: COORDINATESYSTEM . STRING

    STRING  schiebe und gehe zu Zustand 51 über


Zustand 9

   36 pbrt_stmt: COORDSYSTRANSFORM . STRING

    STRING  schiebe und gehe zu Zustand 52 über


Zustand 10

   37 pbrt_stmt: FILM . STRING paramlist

    STRING  schiebe und gehe zu Zustand 53 über


Zustand 11

   38 pbrt_stmt: IDENTITY .

    $default  reduziere mit Regel 38 (pbrt_stmt)


Zustand 12

   39 pbrt_stmt: INCLUDE . STRING

    STRING  schiebe und gehe zu Zustand 54 über


Zustand 13

   40 pbrt_stmt: LIGHTSOURCE . STRING paramlist

    STRING  schiebe und gehe zu Zustand 55 über


Zustand 14

   41 pbrt_stmt: LOOKAT . NUM NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 56 über


Zustand 15

   42 pbrt_stmt: MAKENAMEDMATERIAL . STRING paramlist

    STRING  schiebe und gehe zu Zustand 57 über


Zustand 16

   43 pbrt_stmt: MATERIAL . STRING paramlist

    STRING  schiebe und gehe zu Zustand 58 über


Zustand 17

   44 pbrt_stmt: NAMEDMATERIAL . STRING

    STRING  schiebe und gehe zu Zustand 59 über


Zustand 18

   45 pbrt_stmt: OBJECTBEGIN . STRING

    STRING  schiebe und gehe zu Zustand 60 über


Zustand 19

   46 pbrt_stmt: OBJECTEND .

    $default  reduziere mit Regel 46 (pbrt_stmt)


Zustand 20

   47 pbrt_stmt: OBJECTINSTANCE . STRING

    STRING  schiebe und gehe zu Zustand 61 über


Zustand 21

   48 pbrt_stmt: PIXELFILTER . STRING paramlist

    STRING  schiebe und gehe zu Zustand 62 über


Zustand 22

   49 pbrt_stmt: RENDERER . STRING paramlist

    STRING  schiebe und gehe zu Zustand 63 über


Zustand 23

   50 pbrt_stmt: REVERSEORIENTATION .

    $default  reduziere mit Regel 50 (pbrt_stmt)


Zustand 24

   51 pbrt_stmt: ROTATE . NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 64 über


Zustand 25

   52 pbrt_stmt: SAMPLER . STRING paramlist

    STRING  schiebe und gehe zu Zustand 65 über


Zustand 26

   53 pbrt_stmt: SCALE . NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 66 über


Zustand 27

   54 pbrt_stmt: SHAPE . STRING paramlist

    STRING  schiebe und gehe zu Zustand 67 über


Zustand 28

   55 pbrt_stmt: SURFACEINTEGRATOR . STRING paramlist

    STRING  schiebe und gehe zu Zustand 68 über


Zustand 29

   56 pbrt_stmt: TEXTURE . STRING STRING STRING paramlist

    STRING  schiebe und gehe zu Zustand 69 über


Zustand 30

   57 pbrt_stmt: TRANSFORMBEGIN .

    $default  reduziere mit Regel 57 (pbrt_stmt)


Zustand 31

   58 pbrt_stmt: TRANSFORMEND .

    $default  reduziere mit Regel 58 (pbrt_stmt)


Zustand 32

   59 pbrt_stmt: TRANSFORMTIMES . NUM NUM

    NUM  schiebe und gehe zu Zustand 70 über


Zustand 33

   60 pbrt_stmt: TRANSFORM . num_array

    $default  reduziere mit Regel 2 (array_init)

    array_init                gehe zu Zustand 48 über
    num_array                 gehe zu Zustand 71 über
    single_element_num_array  gehe zu Zustand 50 über


Zustand 34

   61 pbrt_stmt: TRANSLATE . NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 72 über


Zustand 35

   63 pbrt_stmt: VOLUME . STRING paramlist

    STRING  schiebe und gehe zu Zustand 73 über


Zustand 36

   62 pbrt_stmt: VOLUMEINTEGRATOR . STRING paramlist

    STRING  schiebe und gehe zu Zustand 74 über


Zustand 37

   64 pbrt_stmt: WORLDBEGIN .

    $default  reduziere mit Regel 64 (pbrt_stmt)


Zustand 38

   65 pbrt_stmt: WORLDEND .

    $default  reduziere mit Regel 65 (pbrt_stmt)


Zustand 39

    0 $accept: start . $end

    $end  schiebe und gehe zu Zustand 75 über


Zustand 40

    1 start: pbrt_stmt_list .
   24 pbrt_stmt_list: pbrt_stmt_list . pbrt_stmt

    ACCELERATOR         schiebe und gehe zu Zustand 1 über
    ACTIVETRANSFORM     schiebe und gehe zu Zustand 2 über
    AREALIGHTSOURCE     schiebe und gehe zu Zustand 3 über
    ATTRIBUTEBEGIN      schiebe und gehe zu Zustand 4 über
    ATTRIBUTEEND        schiebe und gehe zu Zustand 5 über
    CAMERA              schiebe und gehe zu Zustand 6 über
    CONCATTRANSFORM     schiebe und gehe zu Zustand 7 über
    COORDINATESYSTEM    schiebe und gehe zu Zustand 8 über
    COORDSYSTRANSFORM   schiebe und gehe zu Zustand 9 über
    FILM                schiebe und gehe zu Zustand 10 über
    IDENTITY            schiebe und gehe zu Zustand 11 über
    INCLUDE             schiebe und gehe zu Zustand 12 über
    LIGHTSOURCE         schiebe und gehe zu Zustand 13 über
    LOOKAT              schiebe und gehe zu Zustand 14 über
    MAKENAMEDMATERIAL   schiebe und gehe zu Zustand 15 über
    MATERIAL            schiebe und gehe zu Zustand 16 über
    NAMEDMATERIAL       schiebe und gehe zu Zustand 17 über
    OBJECTBEGIN         schiebe und gehe zu Zustand 18 über
    OBJECTEND           schiebe und gehe zu Zustand 19 über
    OBJECTINSTANCE      schiebe und gehe zu Zustand 20 über
    PIXELFILTER         schiebe und gehe zu Zustand 21 über
    RENDERER            schiebe und gehe zu Zustand 22 über
    REVERSEORIENTATION  schiebe und gehe zu Zustand 23 über
    ROTATE              schiebe und gehe zu Zustand 24 über
    SAMPLER             schiebe und gehe zu Zustand 25 über
    SCALE               schiebe und gehe zu Zustand 26 über
    SHAPE               schiebe und gehe zu Zustand 27 über
    SURFACEINTEGRATOR   schiebe und gehe zu Zustand 28 über
    TEXTURE             schiebe und gehe zu Zustand 29 über
    TRANSFORMBEGIN      schiebe und gehe zu Zustand 30 über
    TRANSFORMEND        schiebe und gehe zu Zustand 31 über
    TRANSFORMTIMES      schiebe und gehe zu Zustand 32 über
    TRANSFORM           schiebe und gehe zu Zustand 33 über
    TRANSLATE           schiebe und gehe zu Zustand 34 über
    VOLUME              schiebe und gehe zu Zustand 35 über
    VOLUMEINTEGRATOR    schiebe und gehe zu Zustand 36 über
    WORLDBEGIN          schiebe und gehe zu Zustand 37 über
    WORLDEND            schiebe und gehe zu Zustand 38 über

    $default  reduziere mit Regel 1 (start)

    pbrt_stmt  gehe zu Zustand 76 über


Zustand 41

   25 pbrt_stmt_list: pbrt_stmt .

    $default  reduziere mit Regel 25 (pbrt_stmt_list)


Zustand 42

   26 pbrt_stmt: ACCELERATOR STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 77 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 43

   27 pbrt_stmt: ACTIVETRANSFORM ALL .

    $default  reduziere mit Regel 27 (pbrt_stmt)


Zustand 44

   28 pbrt_stmt: ACTIVETRANSFORM ENDTIME .

    $default  reduziere mit Regel 28 (pbrt_stmt)


Zustand 45

   29 pbrt_stmt: ACTIVETRANSFORM STARTTIME .

    $default  reduziere mit Regel 29 (pbrt_stmt)


Zustand 46

   30 pbrt_stmt: AREALIGHTSOURCE STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 79 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 47

   33 pbrt_stmt: CAMERA STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 80 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 48

   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  schiebe und gehe zu Zustand 81 über

    $default  reduziere mit Regel 4 (num_array_init)

    num_array_init  gehe zu Zustand 82 über
    num_list_entry  gehe zu Zustand 83 über


Zustand 49

   34 pbrt_stmt: CONCATTRANSFORM num_array .

    $default  reduziere mit Regel 34 (pbrt_stmt)


Zustand 50

   14 num_array: single_element_num_array .

    $default  reduziere mit Regel 14 (num_array)


Zustand 51

   35 pbrt_stmt: COORDINATESYSTEM STRING .

    $default  reduziere mit Regel 35 (pbrt_stmt)


Zustand 52

   36 pbrt_stmt: COORDSYSTRANSFORM STRING .

    $default  reduziere mit Regel 36 (pbrt_stmt)


Zustand 53

   37 pbrt_stmt: FILM STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 84 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 54

   39 pbrt_stmt: INCLUDE STRING .

    $default  reduziere mit Regel 39 (pbrt_stmt)


Zustand 55

   40 pbrt_stmt: LIGHTSOURCE STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 85 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 56

   41 pbrt_stmt: LOOKAT NUM . NUM NUM NUM NUM NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 86 über


Zustand 57

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 87 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 58

   43 pbrt_stmt: MATERIAL STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 88 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 59

   44 pbrt_stmt: NAMEDMATERIAL STRING .

    $default  reduziere mit Regel 44 (pbrt_stmt)


Zustand 60

   45 pbrt_stmt: OBJECTBEGIN STRING .

    $default  reduziere mit Regel 45 (pbrt_stmt)


Zustand 61

   47 pbrt_stmt: OBJECTINSTANCE STRING .

    $default  reduziere mit Regel 47 (pbrt_stmt)


Zustand 62

   48 pbrt_stmt: PIXELFILTER STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 89 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 63

   49 pbrt_stmt: RENDERER STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 90 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 64

   51 pbrt_stmt: ROTATE NUM . NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 91 über


Zustand 65

   52 pbrt_stmt: SAMPLER STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 92 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 66

   53 pbrt_stmt: SCALE NUM . NUM NUM

    NUM  schiebe und gehe zu Zustand 93 über


Zustand 67

   54 pbrt_stmt: SHAPE STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 94 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 68

   55 pbrt_stmt: SURFACEINTEGRATOR STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 95 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 69

   56 pbrt_stmt: TEXTURE STRING . STRING STRING paramlist

    STRING  schiebe und gehe zu Zustand 96 über


Zustand 70

   59 pbrt_stmt: TRANSFORMTIMES NUM . NUM

    NUM  schiebe und gehe zu Zustand 97 über


Zustand 71

   60 pbrt_stmt: TRANSFORM num_array .

    $default  reduziere mit Regel 60 (pbrt_stmt)


Zustand 72

   61 pbrt_stmt: TRANSLATE NUM . NUM NUM

    NUM  schiebe und gehe zu Zustand 98 über


Zustand 73

   63 pbrt_stmt: VOLUME STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 99 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 74

   62 pbrt_stmt: VOLUMEINTEGRATOR STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 100 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 75

    0 $accept: start $end .

    $default  annehmen


Zustand 76

   24 pbrt_stmt_list: pbrt_stmt_list pbrt_stmt .

    $default  reduziere mit Regel 24 (pbrt_stmt_list)


Zustand 77

   26 pbrt_stmt: ACCELERATOR STRING paramlist .

    $default  reduziere mit Regel 26 (pbrt_stmt)


Zustand 78

   19 paramlist: paramlist_init . paramlist_contents

    STRING  schiebe und gehe zu Zustand 101 über

    $default  reduziere mit Regel 22 (paramlist_contents)

    paramlist_contents  gehe zu Zustand 102 über
    paramlist_entry     gehe zu Zustand 103 über


Zustand 79

   30 pbrt_stmt: AREALIGHTSOURCE STRING paramlist .

    $default  reduziere mit Regel 30 (pbrt_stmt)


Zustand 80

   33 pbrt_stmt: CAMERA STRING paramlist .

    $default  reduziere mit Regel 33 (pbrt_stmt)


Zustand 81

   13 num_array: array_init LBRACK . num_list RBRACK

    $default  reduziere mit Regel 4 (num_array_init)

    num_array_init  gehe zu Zustand 82 über
    num_list        gehe zu Zustand 104 über
    num_list_entry  gehe zu Zustand 105 über


Zustand 82

   18 num_list_entry: num_array_init . NUM

    NUM  schiebe und gehe zu Zustand 106 über


Zustand 83

   15 single_element_num_array: array_init num_list_entry .

    $default  reduziere mit Regel 15 (single_element_num_array)


Zustand 84

   37 pbrt_stmt: FILM STRING paramlist .

    $default  reduziere mit Regel 37 (pbrt_stmt)


Zustand 85

   40 pbrt_stmt: LIGHTSOURCE STRING paramlist .

    $default  reduziere mit Regel 40 (pbrt_stmt)


Zustand 86

   41 pbrt_stmt: LOOKAT NUM NUM . NUM NUM NUM NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 107 über


Zustand 87

   42 pbrt_stmt: MAKENAMEDMATERIAL STRING paramlist .

    $default  reduziere mit Regel 42 (pbrt_stmt)


Zustand 88

   43 pbrt_stmt: MATERIAL STRING paramlist .

    $default  reduziere mit Regel 43 (pbrt_stmt)


Zustand 89

   48 pbrt_stmt: PIXELFILTER STRING paramlist .

    $default  reduziere mit Regel 48 (pbrt_stmt)


Zustand 90

   49 pbrt_stmt: RENDERER STRING paramlist .

    $default  reduziere mit Regel 49 (pbrt_stmt)


Zustand 91

   51 pbrt_stmt: ROTATE NUM NUM . NUM NUM

    NUM  schiebe und gehe zu Zustand 108 über


Zustand 92

   52 pbrt_stmt: SAMPLER STRING paramlist .

    $default  reduziere mit Regel 52 (pbrt_stmt)


Zustand 93

   53 pbrt_stmt: SCALE NUM NUM . NUM

    NUM  schiebe und gehe zu Zustand 109 über


Zustand 94

   54 pbrt_stmt: SHAPE STRING paramlist .

    $default  reduziere mit Regel 54 (pbrt_stmt)


Zustand 95

   55 pbrt_stmt: SURFACEINTEGRATOR STRING paramlist .

    $default  reduziere mit Regel 55 (pbrt_stmt)


Zustand 96

   56 pbrt_stmt: TEXTURE STRING STRING . STRING paramlist

    STRING  schiebe und gehe zu Zustand 110 über


Zustand 97

   59 pbrt_stmt: TRANSFORMTIMES NUM NUM .

    $default  reduziere mit Regel 59 (pbrt_stmt)


Zustand 98

   61 pbrt_stmt: TRANSLATE NUM NUM . NUM

    NUM  schiebe und gehe zu Zustand 111 über


Zustand 99

   63 pbrt_stmt: VOLUME STRING paramlist .

    $default  reduziere mit Regel 63 (pbrt_stmt)


Zustand 100

   62 pbrt_stmt: VOLUMEINTEGRATOR STRING paramlist .

    $default  reduziere mit Regel 62 (pbrt_stmt)


Zustand 101

   23 paramlist_entry: STRING . array

    $default  reduziere mit Regel 2 (array_init)

    array_init                   gehe zu Zustand 112 über
    array                        gehe zu Zustand 113 über
    string_array                 gehe zu Zustand 114 über
    single_element_string_array  gehe zu Zustand 115 über
    num_array                    gehe zu Zustand 116 über
    single_element_num_array     gehe zu Zustand 50 über


Zustand 102

   19 paramlist: paramlist_init paramlist_contents .

    $default  reduziere mit Regel 19 (paramlist)


Zustand 103

   21 paramlist_contents: paramlist_entry . paramlist_contents

    STRING  schiebe und gehe zu Zustand 101 über

    $default  reduziere mit Regel 22 (paramlist_contents)

    paramlist_contents  gehe zu Zustand 117 über
    paramlist_entry     gehe zu Zustand 103 über


Zustand 104

   13 num_array: array_init LBRACK num_list . RBRACK
   16 num_list: num_list . num_list_entry

    RBRACK  schiebe und gehe zu Zustand 118 über

    $default  reduziere mit Regel 4 (num_array_init)

    num_array_init  gehe zu Zustand 82 über
    num_list_entry  gehe zu Zustand 119 über


Zustand 105

   17 num_list: num_list_entry .

    $default  reduziere mit Regel 17 (num_list)


Zustand 106

   18 num_list_entry: num_array_init NUM .

    $default  reduziere mit Regel 18 (num_list_entry)


Zustand 107

   41 pbrt_stmt: LOOKAT NUM NUM NUM . NUM NUM NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 120 über


Zustand 108

   51 pbrt_stmt: ROTATE NUM NUM NUM . NUM

    NUM  schiebe und gehe zu Zustand 121 über


Zustand 109

   53 pbrt_stmt: SCALE NUM NUM NUM .

    $default  reduziere mit Regel 53 (pbrt_stmt)


Zustand 110

   56 pbrt_stmt: TEXTURE STRING STRING STRING . paramlist

    $default  reduziere mit Regel 20 (paramlist_init)

    paramlist       gehe zu Zustand 122 über
    paramlist_init  gehe zu Zustand 78 über


Zustand 111

   61 pbrt_stmt: TRANSLATE NUM NUM NUM .

    $default  reduziere mit Regel 61 (pbrt_stmt)


Zustand 112

    7 string_array: array_init . LBRACK string_list RBRACK
    9 single_element_string_array: array_init . string_list_entry
   13 num_array: array_init . LBRACK num_list RBRACK
   15 single_element_num_array: array_init . num_list_entry

    LBRACK  schiebe und gehe zu Zustand 123 über

    NUM       reduziere mit Regel 4 (num_array_init)
    $default  reduziere mit Regel 3 (string_array_init)

    string_array_init  gehe zu Zustand 124 über
    num_array_init     gehe zu Zustand 82 über
    string_list_entry  gehe zu Zustand 125 über
    num_list_entry     gehe zu Zustand 83 über


Zustand 113

   23 paramlist_entry: STRING array .

    $default  reduziere mit Regel 23 (paramlist_entry)


Zustand 114

    5 array: string_array .

    $default  reduziere mit Regel 5 (array)


Zustand 115

    8 string_array: single_element_string_array .

    $default  reduziere mit Regel 8 (string_array)


Zustand 116

    6 array: num_array .

    $default  reduziere mit Regel 6 (array)


Zustand 117

   21 paramlist_contents: paramlist_entry paramlist_contents .

    $default  reduziere mit Regel 21 (paramlist_contents)


Zustand 118

   13 num_array: array_init LBRACK num_list RBRACK .

    $default  reduziere mit Regel 13 (num_array)


Zustand 119

   16 num_list: num_list num_list_entry .

    $default  reduziere mit Regel 16 (num_list)


Zustand 120

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM . NUM NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 126 über


Zustand 121

   51 pbrt_stmt: ROTATE NUM NUM NUM NUM .

    $default  reduziere mit Regel 51 (pbrt_stmt)


Zustand 122

   56 pbrt_stmt: TEXTURE STRING STRING STRING paramlist .

    $default  reduziere mit Regel 56 (pbrt_stmt)


Zustand 123

    7 string_array: array_init LBRACK . string_list RBRACK
   13 num_array: array_init LBRACK . num_list RBRACK

    NUM       reduziere mit Regel 4 (num_array_init)
    $default  reduziere mit Regel 3 (string_array_init)

    string_array_init  gehe zu Zustand 124 über
    num_array_init     gehe zu Zustand 82 über
    string_list        gehe zu Zustand 127 über
    string_list_entry  gehe zu Zustand 128 über
    num_list           gehe zu Zustand 104 über
    num_list_entry     gehe zu Zustand 105 über


Zustand 124

   12 string_list_entry: string_array_init . STRING

    STRING  schiebe und gehe zu Zustand 129 über


Zustand 125

    9 single_element_string_array: array_init string_list_entry .

    $default  reduziere mit Regel 9 (single_element_string_array)


Zustand 126

   41 pbrt_stmt: LOOKAT NUM NUM NUM NUM NUM . NUM NUM NUM NUM

    NUM  schiebe und gehe zu Zustand 130 über


Zustand 127

    7 string_array: array_init LBRACK string_list . RBRACK
   10 string_list: string_list . string_list_entry

    RBRACK  schiebe und gehe zu Zustand 131 über

    $default  reduziere mit Regel 3 (string_array_init)

    string_array_init  gehe zu Zustand 124 über
    string_list_entry  gehe zu Zustand 132 über


Zustand 128

   11 string_list: string_list_entry .

